--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-tracked": "^1.7.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
