--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-tracked": "^1.7.6",
     "styled-components": "^5.3.3"
   },
